classDiagram
    class RoleDashboardCreator {
      <<abstract>>
      +createNavigationConfig() NavigationConfig
      +createMainContent(renderers) JSXElement
    }

    class CitizenDashboardCreator {
      +createNavigationConfig() NavigationConfig
      +createMainContent(renderers) JSXElement
    }

    class ProviderDashboardCreator {
      +createNavigationConfig() NavigationConfig
      +createMainContent(renderers) JSXElement
    }

    class AdminDashboardCreator {
      +createNavigationConfig() NavigationConfig
      +createMainContent(renderers) JSXElement
    }

    class NavigationConfig {
      +defaultTab: string
      +tabs: string[]
      +tabLabels: object
    }

    class RoleDashboardFactory {
      +createRoleDashboardCreator(role) RoleDashboardCreator
    }

    class DashboardUI {
      +render()
    }

    RoleDashboardCreator <|-- CitizenDashboardCreator
    RoleDashboardCreator <|-- ProviderDashboardCreator
    RoleDashboardCreator <|-- AdminDashboardCreator
    RoleDashboardCreator --> NavigationConfig : returns
    DashboardUI --> RoleDashboardFactory : calls
    DashboardUI --> NavigationConfig : uses for nav
    DashboardUI --> RoleDashboardCreator : uses product

